# dwagents

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
examples/: parallel_agents.py
examples/prompts/: calculate_totals.md  research_topic.md
src/dwagents/: __init__.py  agent.py  cli.py  config.py  mcp.py  observability.py  parallel.py
src/dwagents/models/: __init__.py  _openai_compat.py  batch.py  realtime.py
src/dwagents/tools/: commands.py  example_tools.py
tests/: test_agent.py  test_cli.py  test_commands.py  test_mcp.py  test_models.py  test_observability.py  test_parallel.py
